Descripción de cartas y subida de Assets